Fixed auth indent issues
Modified tags in ipython example

--- a/examples/pyIUDX_sample_usecases.ipynb
+++ b/examples/pyIUDX_sample_usecases.ipynb
@@ -192,7 +192,7 @@
         "colab": {}
       },
       "source": [
-        "attributes = {\"tags\": [\"aqi\", \"aqm\"]}\n",
+        "attributes = {\"tags\": [\"aqi\", \"aqm\", \"climo\"]}\n",
         "allAQMItems = cat.getManyResourceItems(attributes)"
       ],
       "execution_count": 0,
@@ -336,7 +336,7 @@
       },
       "source": [
         "geo1 = {\"circle\": {\"lat\": 18.539107, \"lon\": 73.853987, \"radius\": 3000}}\n",
-        "attributes = {\"tags\": [\"aqm\"]}\n",
+        "attributes = {\"tags\": [\"aqi\", \"aqm\", \"climo\"]}\n",
         "filters = [\"id\"]\n"
       ],
       "execution_count": 0,
@@ -458,7 +458,7 @@
       },
       "source": [
         "geo1 = {\"circle\": {\"lat\": 18.539107, \"lon\": 73.853987, \"radius\": 3000}}\n",
-        "attributes = {\"tags\": [\"aqm\"]}\n",
+        "attributes = {\"tags\": [\"aqi\", \"aqm\", \"climo\"]}\n",
         "filters = [\"id\"]\n",
         "allAQMItemsByID = cat.getManyResourceItems(attributes, filters, geo=geo1)"
       ],
@@ -1097,7 +1097,7 @@
       "source": [
         "from pyIUDX.rs import item\n",
         "geo1 = {\"circle\": {\"lat\": 18.539107, \"lon\": 73.853987, \"radius\": 30000}}\n",
-        "attributes = {\"tags\": [\"aqm\"]}\n",
+        "attributes = {\"tags\": [\"aqi\", \"aqm\", \"climo\"]}\n",
         "filters = [\"id\"]\n",
         "allAQMItemsByID = cat.getManyResourceItems(attributes, filters, geo=geo1)\n",
         "print(allAQMItemsByID)\n",
