Added data model link in jupyter

--- a/examples/pyIUDX_sample_usecases.ipynb
+++ b/examples/pyIUDX_sample_usecases.ipynb
@@ -507,7 +507,9 @@
    },
    "source": [
     "### Fetch Quantitative Properties \n",
-    "We will iterate across the list of sensors and obtain *PM10_MAX* values and its meta-information. Further, we will also obtain data for a specified duration."
+    "We will iterate across the list of sensors and obtain *PM10_MAX* values and its meta-information. Further, we will also obtain data for a specified duration.\n",
+    "You can find the data model for an AQM sensor here \n",
+    "https://github.com/iudx/iudx-ld/blob/master/data_models/environment/airQuality/env_aqm_climoPune_0.json"
    ]
   },
   {
