Fixed hard coded urls

--- a/examples/Flood_getting_started.ipynb
+++ b/examples/Flood_getting_started.ipynb
@@ -75,7 +75,7 @@
    ],
    "source": [
     "# install the latest version of pyIUDX module from github\n",
-    "pip install git+https://github.com/iudx/pyIUDX@v0.1.0"
+    "pip install git+https://github.com/iudx/pyIUDX"
    ]
   },
   {
@@ -198,7 +198,7 @@
     "from pyIUDX.rs import item\n",
     "m = folium.Map(location=[18.5204,73.8567],zoom_start=12)\n",
     "plugins.ScrollZoomToggler().add_to(m)\n",
-    "flood_sensors = item.Items(\"https://pudx.catalogue.iudx.org.in/catalogue/v1\", all_flood_ItemsByID)\n",
+    "flood_sensors = item.Items(\"https://pudx.catalogue.iudx.org.in/catalogue/v1\", \"https://pudx.resourceserver.iudx.org.in/resource-server/pscdcl/v1\", all_flood_ItemsByID)\n",
     "print(flood_sensors[0].geoProperties)\n",
     "for sensor in flood_sensors:\n",
     "  sensor_id = sensor.id  \n",
