--- a/examples/ITMS_getting_started.ipynb
+++ b/examples/ITMS_getting_started.ipynb
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "pip install git+https://github.com/iudx/pyIUDX@v0.1.0"
+    "pip install git+https://github.com/iudx/pyIUDX"
    ]
   },
   {
