--- a/examples/pyIUDX_sample_usecases.ipynb
+++ b/examples/pyIUDX_sample_usecases.ipynb
@@ -489,7 +489,7 @@
     "\n",
     "\n",
     "m = folium.Map(location=[18.5204,73.8567],zoom_start=12)\n",
-    "aqms = item.Items(\"https://pudx.catalogue.iudx.org.in/catalogue/v1\", allAQMItemsByID)\n",
+    "aqms = item.Items(\"https://pudx.catalogue.iudx.org.in/catalogue/v1\", \"https://pudx.resourceserver.iudx.org.in/resource-server/pscdcl/v1\", allAQMItemsByID)\n",
     "print(aqms[0].geoProperties)\n",
     "for sensor in aqms:\n",
     "  sensor_id = sensor.id  \n",
